# Quasarr

./: .gitignore  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: DockerAutoPush.yml
docker/: Dockerfile  docker-compose.yml
postman/: Quasarr.postman_collection.json
postman/samples/: sample.nzb
quasarr/: __init__.py
quasarr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quasarr/api/: __init__.py  am_monitor.py  debug_dashboard.py
quasarr/api/arr/: __init__.py
quasarr/api/captcha/: __init__.py
quasarr/api/config/: __init__.py
quasarr/downloads/: __init__.py  ytdlp_worker.py
quasarr/downloads/sources/: am.py  dd.py  me.py  zt.py
quasarr/providers/: html_images.py  imdb_metadata.py  log.py  notifications.py  players.py  shared_state.py  tvdb_metadata.py  version.py
quasarr/search/: __init__.py
quasarr/search/sources/: am.py  by.py  dd.py  dt.py  dw.py  fx.py  mb.py  me.py  nx.py  sf.py  sl.py  wd.py  zt.py
quasarr/storage/: config.py  setup.py
tests/: add_zt_test.py  conftest.py  test_am_ytdlp_worker.py  test_arr_helpers.py  test_shared_state.py  test_zt_helpers.py  test_zt_parsing.py  test_zt_regression_cases.py  zt_test_ui.py
tests/fixtures/zt/: current_domain.txt  detail_film_inception.html  detail_film_inception_4k.html  detail_film_intouchables.html  detail_film_mixed_hosts.html  detail_film_no_links.html  detail_film_size_variants.html  detail_series_breakingbad_s2.html  detail_series_onepiece_s1.html  search_films_inception.html  search_films_intouchables.html  (+1 more)
tests/search/: test_me.py
(+4 files in other folders)
